--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
     "paper-card": "PolymerElements/paper-card#2.1.0",
-    "paper-button": "PolymerElements/paper-button#2.1.3"
+    "paper-button": "PolymerElements/paper-button#2.1.3",
+    "notification-toast": "jifalops/notification-toast#^0.2.0"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
